# piecewise-linearization-first-order-loss

./: Makefile  README.md  pyproject.toml  setup.py
src/experiment/: dataset.csv  dataset.tex  experiment.py  process_latex.py  result.csv  result.tex
src/partition/: __init__.py  algorithm.py
test/: test_partition_algorithm.py
