[tool.poetry]
name = "partition"
version = "0.1.0"
description = ""
authors = ["Yotaro Takazawa"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
flake8 = "*"
isort = "*"
autoflake = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"